Trim SDK README into docs entrypoint